<?xml version="1.0"?>
<package format="3">
  <name>amtc_utils</name>
  <version>0.0.0</version>
  <description>The amtc_utils package</description>
  <maintainer email="isao.parra@amtc.uchile.cl">Isao Parra</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>resource_manager_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
